--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">   
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="./assets/css/bootstrap.min.css"> -->
+  <link rel="manifest" href="assets/manifest.json">
+  <meta name="theme-color" content="#009688">
  
 </head>
 <body>
     <app-root></app-root>
-
-
- 
 
 </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
